updates to fix spacing issue

--- a/main.css
+++ b/main.css
@@ -275,7 +275,7 @@
     }
 
     .project_one .projOneText {
-      margin: 0 200px;
+      margin: 0 250px;
       font-size: 16px;
       font-weight: 600;
     }
